2013-11-04  Michael Wiegand <michael.wiegand@greenbone.net>

	* src/html/omp.xsl: Add missing ":".

2013-11-01  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/omp.xsl (list-window): Add filt_id to refresh form so that
	the named filter is kept when the user changes the refresh.  Also remove
	the override param otherwise the filter term takes preference.  I think
	this is safe to do now that the overrides are controlled on a separate
	form.

2013-11-01  Matthew Mundell <matthew.mundell@greenbone.net>

	Use a string only version of the omp function when the argument is just
	a string, otherwise the format specifiers in the strings of complex
	commands like CREATE_CONFIG can cause errors.

	* src/gsad_omp.c (omp): Replace formatting args with a single string
	arg.  Update all callers.
	(ompf): New function.  Formatting version of omp.  Use in all callers
	that used "omp" with formatting.

2013-11-01  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/gsad_omp.c (import_config_omp): Switch to new style with "next"
	param handling.
	(import_report_format_omp): Correct fallback URLs.

	* src/html/gsad.xsl (html-gsa-logo): Apply create indicator on New
	Config page.

	* src/html/omp.xsl (html-import-config-form): Add next param to import
	form.

2013-11-01  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/html/img/last.png, src/html/img/first.png: Replaced
	the placeholder with actual icons.

2013-10-31  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/html/img/alterable.png: Updated with new icon.

2013-10-31  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* src/html/omp.xsl (gsa:type-many): Add "allinfo" as a type without
	plural s.
	(edit-header-icons, details-header-icons): Add optional cap-type-plural
	parameter for consistency with changes to list-window.
	(list-window): Handle subtypes and special plural cases like "info" or
	"DFN-CERT Advisories". Hide Actions column if icon-count is 0.